# Chocapic

./: README.md  docker-compose.yml  jest.config.js  package.json  playwright.config.ts  types.d.ts
backend/: pyproject.toml  start.sh
backend/app/: settings.py
backend/hr/migrations/: 0001_initial.py  0002_auto_20221203_1537.py
backend/templates/hr/: add_employee.haml  add_team.haml  address.haml  base.haml  contract.haml  delete_employee.haml  delete_team.haml  employee.haml  employees.haml  index.haml  members.haml  promote.haml  reset_db.haml  teams.haml
end_to_end_tests/: EmployeeCreateFormPage.ts  EmployeeDetailPage.ts  EmployeesPage.ts  ResetDatabasePage.ts  TeamCreateFormPage.ts  TeamsPage.ts  index.test.ts  types.d.ts
end_to_end_tests/pages/: EmployeeCreateFormPage.ts  EmployeeDetailPage.ts  EmployeesPage.ts  ResetDatabasePage.ts  TeamsPage.ts  index.ts
infra/: README.md  automation.py  index.html  re-init-dbs.sh
infra/nginx/: nginx.conf
infra/nginx/servers/: default.conf  sub.conf.in
infra/nginx/upstreams/: conf.in
infra/stress-test/src/: main.rs
infra/systemd/: gunicorn.in.service  gunicorn.in.socket
integration_tests/: add-employee-with-the-same-email.test.ts  add-employee.test.ts  add-team.test.ts  helper-api.ts  helper-db.ts  helper.ts
